--- a/Css/style.css
+++ b/Css/style.css
@@ -26,4 +26,8 @@ canvas {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 50px;
 	text-align: center;
+}
+.loading-img {
+	width: 150px;
+	height: 150px;
 } 
