--- a/master/Css/style.css
+++ b/master/Css/style.css
@@ -4,6 +4,7 @@ canvas {
     left: 0px;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 .fps {
 	position: absolute;
@@ -15,3 +16,18 @@ canvas {
 	background-color: rgba(0, 0, 0, .4);
 	padding: 10px 17px;
 }
+.loading {
+	position: absolute;
+    top: 50px;
+    left: 0px;
+	width: 100%;
+	height: 100%;
+	color: #222;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 50px;
+	text-align: center;
+}
+.loading-img {
+	width: 150px;
+	height: 150px;
+} 
