--- a/develop/Css/style.css
+++ b/develop/Css/style.css
@@ -8,7 +8,7 @@ canvas {
 }
 .fps {
 	position: absolute;
-	top: 0px;   
+	top: 20px;   
 	left: 20px;
 	color: #FFF;
 	font-family: Arial, Helvetica, sans-serif;
@@ -28,6 +28,10 @@ canvas {
 	text-align: center;
 }
 .loading-img {
-	width: 150px;
-	height: 150px;
+	width: 48px;
+	height: 96px;
+}
+
+body {
+  overflow: hidden;
 } 
