--- a/Css/style.css
+++ b/Css/style.css
@@ -9,12 +9,13 @@ canvas {
 .fps {
 	position: absolute;
 	top: 20px;   
-	left: 20px;
+	right: 20px;
 	color: #FFF;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	background-color: rgba(0, 0, 0, .4);
 	padding: 10px 17px;
+	text-align: right;
 }
 .loading {
 	position: absolute;
