--- a/Css/style.css
+++ b/Css/style.css
@@ -1,11 +1,16 @@
 canvas {
 	position: absolute;
-    top: 0px;
-    left: 0px;
+	top: 0px;
+	left: 0px;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
+
+body {
+	overflow: hidden;
+}
+
 .fps {
 	position: absolute;
 	top: 20px;   
@@ -17,22 +22,35 @@ canvas {
 	padding: 10px 17px;
 	text-align: right;
 }
-.loading {
-	position: absolute;
-    top: 50px;
-    left: 0px;
+
+#loading {
 	width: 100%;
 	height: 100%;
-	color: #222;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 50px;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
-.loading-img {
+
+#loading-img {
 	width: 48px;
 	height: 96px;
 }
 
-body {
-  overflow: hidden;
-} 
+#container {
+	width: 100%;
+	height: 100%;
+}
+
+#outer {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#inner {
+	width: 100%;
+	height: 30px;
+	background-color: green;
+}
